--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@mui/base": "5.0.0-beta.69",
     "@mui/icons-material": "6.4.7",
     "@mui/material": "6.4.7",
     "axios": "1.8.2",
+    "jamaalsd-react-scripts": "^0.1.5",
     "loader-utils": "3.3.1",
     "notistack": "3.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "7.3.0",
-    "swiper": "11.2.5",
-    "@mui/base": "5.0.0-beta.69",
-    "jamaalsd-react-scripts": "0.1.5",
-    "typescript": "5.8.2"
+    "react-scripts": "^5.0.0",
+    "swiper": "11.2.5"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
