--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jamaalsd-react-scripts": "^0.1.5",
     "loader-utils": "3.3.1",
     "notistack": "3.0.2",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "7.3.0",
